--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
+  "files": ["dist/**/*"],
   "scripts": {
     "build": "tsc"
   },
@@ -19,5 +20,8 @@
   "homepage": "https://github.com/Drajvon/library#readme",
   "devDependencies": {
     "typescript": "^3.6.4"
+  },
+  "dependencies": {
+    "@drycode/biblioteka": "^0.1.0"
   }
 }
